# trial-slint

./: readme.md
cppdemo/: .gitignore  CMakeLists.txt
cppdemo/app/: CMakeLists.txt
cppdemo/app/src/: main.cpp
rfulltexteditor/app/: Cargo.toml  build.rs
rfulltexteditor/app/ui/: app-window.slint
rustdemo/app/: Cargo.toml
rustdemo/app/src/: main.rs
rustdemo/app/ui/: app-window.slint  theme.slint
rustdemo/app/ui/page/: count-page.slint  dialog-page.slint  input-page.slint  key-page.slint  live-page.slint  path-page.slint  popup-page.slint  rect-page.slint  state-page.slint  std-1-page.slint  std-2-page.slint  structure-page.slint
